Make item fonts smaller on mobile devices to fix wrapping into 3 lines

--- a/style.css
+++ b/style.css
@@ -710,3 +710,15 @@ ul.unstyled {
     color: #ccc;
     margin: 0 4px;
 }
+
+@media (max-width: 767px) {
+    .item-title {
+        font-size: 1.0em;
+    }
+    .item-subtitle {
+        font-size: 0.85em;
+    }
+    .item-date {
+        font-size: 0.8em;
+    }
+}
